--- a/templates/dashboard/userbar.html
+++ b/templates/dashboard/userbar.html
@@ -7,16 +7,17 @@
                         <div class="account-wrap">
                             <div class="account-item clearfix js-item-menu">
                                 <div class="image">
-                                    <img src="{% static 'dashboard/images/icon/img.png' %}" alt="A'lamxo'jayeva Ruxshona" />
+                                    <img src="{% static 'dashboard/images/icon/img_1.png' %}" alt="A'lamxo'jayeva Ruxshona" />
                                 </div>
                                 <div class="content">
                                     <a class="js-acc-btn" href="#">{{user.username}}</a>
+<!--                                    <a class="js-acc-btn" href="#">{{user.email}}</a>-->
                                 </div>
                                 <div class="account-dropdown js-dropdown">
                                     <div class="info clearfix">
                                         <div class="image">
                                             <a href="#">
-                                                <img src="{% static 'dashboard/images/icon/img.png' %}" alt="A'lamxo'jayeva Ruxshona" />
+                                                <img src="{% static 'dashboard/images/icon/img_1.png' %}" alt="A'lamxo'jayeva Ruxshona" />
                                             </a>
                                         </div>
                                         <div class="content">
@@ -34,6 +35,10 @@
                                         <div class="account-dropdown__item">
                                             <a href="#">
                                                 <i class="zmdi zmdi-settings"></i>Setting</a>
+                                        </div>
+                                        <div class="account-dropdown__item">
+                                            <a href="#">
+                                                <i class="zmdi zmdi-settings"></i>Bexruzga cuntiriw uchun</a>
                                         </div>
                                     </div>
                                     <div class="account-dropdown__footer">
